--- a/Jogos/Jogodamemoria/game01.css
+++ b/Jogos/Jogodamemoria/game01.css
@@ -3,5 +3,15 @@
     flex-wrap: wrap;
     height: 300px;
     width:400px;
+
+    border-color: antiquewhite;
+    border: 20px;
     
+}
+
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
